search box right float;

--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@
 article.post, article.page {
   box-shadow: none; }
 
+header div.header-wrapper div.header-main-menu .acmethemes-nav {
+  float: none; }
+  header div.header-wrapper div.header-main-menu .acmethemes-nav ul > li:last-child {
+    float: right;
+    margin-right: 20px; }
 header div.site-logo {
   margin-top: 10px; }
   header div.site-logo p.site-title {
