--- a/style.scss
+++ b/style.scss
@@ -30,7 +30,10 @@ header {
             float: right;
             margin-right: 20px;
         }
-    }    
+    }
+    div.top-header-section {
+        display: none;
+    }
     div.site-logo {
         margin-top: 10px;
         p.site-title {
