--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header div.site-logo {
       text-transform: none;
       font: normal 0.9em Georgia,sans-serif; }
 
-.not-found #primary, .error-404 #primary {
+.error-404 #primary {
   width: inherit !important; }
 
 footer .edit-link {
